--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
+### Node ###
+# Logs
+logs
+*.log
+npm-debug.log*
+node_modules/
+.sass-cache/
+
+### OSX ###
+.DS_Store
+.AppleDouble
+.LSOverride
+
+### Linux ###
+*~
+
+### Webstorm ###
 .idea
