--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["@babel/preset-env", "@babel/preset-react"],
-  "plugins": ["minify-dead-code-elimination"]
+  "plugins": ["minify-dead-code-elimination", "@babel/plugin-proposal-class-properties"]
 }
