--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "deploy": "gh-pages -d app/build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --hot -d",
-    "build": "webpack -p"
+    "build": "webpack --progress --display-error-details"
   },
   "repository": {
     "type": "git",
